# surface-scan-mlops

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  README.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
app/: streamlit_app.py
artifacts/efficientnetb0/: efficientnetb0_frozen_best.keras.dvc
data/: interim.dvc
notebooks/: 01_data_understanding.ipynb  02_baseline_cnn_mlflow.ipynb  03_transfer_learning_mlflow.ipynb  03_transfer_learning_mlflow_ipynb.ipynb  04_gradcam_error_analysis.ipynb
reports/evaluation/: test_classification_report.csv  test_confusion_matrix.csv  test_error_predictions.csv  test_metrics.json  test_predictions.csv
reports/gradcam_error_analysis/: confusion_pairs.csv  error_analysis_summary.json  test_error_predictions.csv
reports/training/: custom-cnn-smoke-test_history.csv  custom_cnn-frozen-lr-0.001_history.csv  efficientnetb0-final-test_history.csv  efficientnetb0-smoke-test_history.csv  mobilenetv3small-frozen-lr-0.001_history.csv
src/: data_validation.py  evaluate.py  gradcam.py  model_factory.py  predict.py  preprocess.py  train.py
