[project]
name = "surface-scan-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dvc>=3.60,<4",
    "kaggle>=2.2.3",
    "matplotlib>=3.10.6",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=5.0.0.93",
    "pandas>=2.3.3",
    "pathspec==0.12.1",
    "pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.0",
    "tensorflow-cpu>=2.16.2,<2.22",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
